56Ar3 KAS and KAS-SSC party role clarifications
https://github.com/usnistgov/ACVP/issues/1395

--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -47,7 +47,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 | revision| The algorithm testing revision to use.| value| "Sp800-56Ar3"| No
 | prereqVals| Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>| No
 | function| Type of function supported| array| See <<supported_functions>>| Yes
-| iutId| The identifier of the IUT.| hex|  | No 
+| iutId| The identifier of the IUT, i.e., the IDu or IDv from Sections 5.8 and 6 of SP 800-56Ar3. This identifier is referred to as uPartyId or vPartyId in <<fixedinfopatcon>>.| hex|  | No 
 | scheme| Array of supported key agreement schemes each having their own capabilities| object| See <<supported_schemes>>| No
 | domainParameterGenerationMethods| Array of IUT supported domain parameter generation methods. | array | P-224, P-256, P-384, P-521, K-233, K-283, K-409, K-571, B-233, B-283, B-409, B-571| No
 |===
@@ -87,7 +87,7 @@ All other scheme capabilities are advertised as a self-contained JSON object usi
 |===
 | JSON Value| Description| JSON Type| Valid Values| Optional
 
-| kasRole| Roles supported for key agreement| array| initiator and/or responder| No
+| kasRole| The roles that the IUT can support for the scheme. A value of "initiator" indicates that the IUT can support the role of Party U. A value of "responder" indicates that the IUT can support the role of Party V. "initiator" and "responder" are the legacy terms (pre-SP 800-56Ar2) for Party U and Party V. | array of string | "initiator", "responder"| No
 | kdfMethods| The KDF methods to use when testing KAS schemes. | object| <<kdfmethods>>| No
 | keyConfirmationMethod| The KeyConfirmation capabilities (when supported) for the scheme.| object| <<keyconfirmmethod>>| Yes
 | l | The length of the key to derive (using a KDF) or transport (using a KTS scheme).  This value should be large enough to
@@ -221,6 +221,7 @@ substitutes "0123456789ABCDEF" in place of the field
     { || ephemeralNonce } { || dkmNonce } { || c }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the uPartyInfo
     for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
+    *** uPartyId is the identifier of Party U, i.e., the IDu from Sections 5.8 and 6 of SP 800-56Ar3.
 
 * vPartyInfo
 
@@ -231,6 +232,7 @@ substitutes "0123456789ABCDEF" in place of the field
     { || ephemeralNonce } { || dkmNonce } { || c }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the vPartyInfo
     for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
+     *** vPartyId is the identifier of Party V, i.e., the IDv from Sections 5.8 and 6 of SP 800-56Ar3.
 
 * context
 
