--- a/src/kas/sp800-56ar3/ecc/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/06-test-vectors.adoc
@@ -14,11 +14,10 @@ The test group for KAS/KTS ECC is as follows:
 | tgId| Numeric identifier for the test group, unique across the entire vector set. | value| No
 | testType|  The type of test for the group (AFT or VAL). | value| No
 | scheme| The scheme in use for the group. See <<supported_schemes>> for possible values. | value| No
-
-| kasRole| The group role from the perspective of the IUT.| value| No
-| l| The length of key to derive/transport.| value| No
-| iutId| The Iut's identifier.| value| No
-| serverId| The ACVP server's identifier.| value| No
+| kasRole| The role of the IUT for the test group. A value of "initiator" indicates that the IUT will assume the role of Party U. A value of "responder" indicates that the IUT will assume the role of Party V. "initiator" and "responder" are the legacy terms (pre-SP 800-56Ar2) for Party U and Party V.| value| No
+|l| The length of key to derive/transport.| value| No
+| iutId| The identifier of the IUT, i.e., the IDu or IDv (depends on the value of kasRole) from Sections 5.8 and 6 of SP 800-56Ar3. This identifier is referred to as uPartyId or vPartyId in <<fixedinfopatcon>>. It is provided to the ACVP server in the capabilities registration. | value| No
+| serverId| The identifier of the ACVP server, i.e., the IDu or IDv (depends on the role being assumed by the ACVP server; dependent on the value of kasRole) from Sections 5.8 and 6 of SP 800-56Ar3. This identifier is referred to as uPartyId or vPartyId in <<fixedinfopatcon>>. A hex string. | value| No
 | kdfConfiguration| The KDF configuration for the group.| Object, See <<kdfconfig>>| No
 | macConfiguration| The MAC configuration for the group.| Object, See <<macconfig>>| Not optional for schemes using key confirmation.
 | keyConfirmationDirection| The key confirmation direction. | value| Yes
