--- a/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
@@ -46,7 +46,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 | revision| The algorithm testing revision to use.| value| "Sp800-56Ar3"| No
 | prereqVals| Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>| No
 | function| Type of function supported| array| See <<supported_functions>>| Yes
-| iutId| The identifier of the IUT.| hex|  | No 
+| iutId| The identifier of the IUT, i.e., the IDu or IDv from Section 6 of SP 800-56Ar3. This identifier is referred to as uPartyId or vPartyId in <<fixedinfopatcon>>.| hex|  | No 
 | scheme| Array of supported key agreement schemes each having their own capabilities| object| See <<supported_schemes>>| No
 | domainParameterGenerationMethods| Array of IUT supported domain parameter generation methods.  Note that "FB" and "FC" are considered legacy, and should only be included for interoperability with other systems unable to support the safe prime groups.| array | MODP-2048, MODP-3072, MODP-4096, MODP-6144, MODP-8192, ffdhe2048, ffdhe3072, ffdhe4096, ffdhe6144, ffdhe8192, FB, FC| No
 |===
@@ -86,7 +86,7 @@ All other scheme capabilities are advertised as a self-contained JSON object usi
 |===
 | JSON Value| Description| JSON type| Valid Values| Optional
 
-| kasRole| Roles supported for key agreement| array| initiator and/or responder| No
+| kasRole| The roles that the IUT can support for the scheme. A value of "initiator" indicates that the IUT can support the role of Party U. A value of "responder" indicates that the IUT can support the role of Party V. "initiator" and "responder" are the legacy terms (pre-SP 800-56Ar2) for Party U and Party V. | array of string | "initiator", "responder"| No
 | kdfMethods| The KDF methods to use when testing KAS schemes. | object| <<kdfmethods>>| No
 | keyConfirmationMethod| The KeyCnfirmation capabilities (when supported) for the scheme.| object| <<keyconfirmmethod>>| Yes
 | l | The length of the key to derive (using a KDF) or transport (using a KTS scheme).  This value should be large enough to accommodate the key length used for the mac algorithms in use for key confirmation, ideally the maximum value the IUT can support with their KAS/KTS implementation.  Maximum value (for testing purposes) is 1024.| integer| 128 minimum without KC, 136 minimum with KC, maximum 1024.| No
@@ -213,6 +213,7 @@ Pattern candidates:
     { || ephemeralNonce } { || dkmNonce } { || c }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the uPartyInfo
     for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
+    *** uPartyId is the identifier of Party U, i.e., the IDu from Sections 5.8 and 6 of SP 800-56Ar3.
 
 * vPartyInfo
   ** vPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
@@ -222,6 +223,7 @@ Pattern candidates:
     { || ephemeralNonce } { || dkmNonce } { || c }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the vPartyInfo
     for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
+    *** vPartyId is the identifier of Party V, i.e., the IDv from Sections 5.8 and 6 of SP 800-56Ar3.
 
 * context
   ** Random value chosen by ACVP server to represent the context.
