--- a/src/kas/sp800-56ar3/ssc/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ssc/ffc/sections/05-capabilities.adoc
@@ -45,7 +45,6 @@ A registration *SHALL* use these properties:
 | prereqVals | Prerequisites of the algorithm | object | See <<prerequisites>>
 | scheme | Array of schemes supported | array of objects | See <<scheme>>
 | domainParameterGenerationMethods | Array of strings representing the supported means of generating domain parameters | array of strings | See <<domainParameterGenerationMethods>>
-| scheme | Array of schemes supported | dictionary | See <<scheme>>
 | hashFunctionZ | Optional hash function to apply to the shared secret `z` in instances where the IUT is unable to return the `z` in the clear. | string | See <<hashFunctionZ>>
 |===
 
@@ -73,7 +72,7 @@ The scheme object is made up of the following properties:
 .Scheme Properties
 |===
 | JSON Property | Description | JSON Type | Valid Values
-| kasRole | The roles the IUT can support for the scheme | array of string | "initiator", "responder" |
+| kasRole | The roles that the IUT can support for the scheme. A value of "initiator" indicates that the IUT can support the role of Party U. A value of "responder" indicates that the IUT can support the role of Party V. "initiator" and "responder" are the legacy terms (pre-SP 800-56Ar2) for Party U and Party V. | array of string | "initiator", "responder" |
 |===
 
 [#domainParameterGenerationMethods]
