--- a/src/kas/sp800-56ar3/ssc/ffc/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56ar3/ssc/ffc/sections/06-test-vectors.adoc
@@ -14,7 +14,7 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | q | The Q value for use in DSA domain parameters.  Only provided for "FB"/"FC" `domainParameterGenerationMode`s | hex
 | g | The G value for use in DSA domain parameters.  Only provided for "FB"/"FC" `domainParameterGenerationMode`s | hex
 | scheme | KAS scheme under test | string
-| kasRole | The IUT role under test | string
+| kasRole | The role of the IUT for the test group. A value of "initiator" indicates that the IUT will assume the role of Party U. A value of "responder" indicates that the IUT will assume the role of Party V. "initiator" and "responder" are the legacy terms (pre-SP 800-56Ar2) for Party U and Party V. | string
 | hashFunctionZ | The hash function applied to `z` (optional) | string
 | tests | Array of individual test cases | See <<testCase>>
 |===
