--- a/src/kas/sp800-56ar3/ssc/ecc/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56ar3/ssc/ecc/sections/06-test-vectors.adoc
@@ -11,7 +11,7 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | testType | Describes the operation the client should perform on the tests data | string
 | domainParameterGenerationMode | The curve in use for key generation for the test group | string
 | scheme | KAS scheme under test | string
-| kasRole | The IUT role under test | string
+| kasRole | The role of the IUT for the test group. A value of "initiator" indicates that the IUT will assume the role of Party U. A value of "responder" indicates that the IUT will assume the role of Party V. "initiator" and "responder" are the legacy terms (pre-SP 800-56Ar2) for Party U and Party V. | string
 | hashFunctionZ | The hash function applied to `z` (optional) | string
 | tests | Array of individual test cases | See <<testCase>>
 |===
