KAS 56Ar3 Table 16 and FixedInfo Updates

--- a/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
@@ -212,7 +212,7 @@ Pattern candidates:
     used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "uPartyId { || ephemeralKey } 
     { || ephemeralNonce } { || dkmNonce } { || c }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the uPartyInfo
-    for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
+    for a given test case is dependant on the scheme and party being tested. Please consult Section 6 of SP 800-56Ar3 to determine whether or not an "optional" item is applicable to the scheme being tested and must be included as part of the uPartyInfo for a given test case.
     *** uPartyId is the identifier of Party U, i.e., the IDu from Sections 5.8 and 6 of SP 800-56Ar3.
 
 * vPartyInfo
@@ -222,7 +222,7 @@ Pattern candidates:
     used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "vPartyId { || ephemeralKey } 
     { || ephemeralNonce } { || dkmNonce } { || c }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the vPartyInfo
-    for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
+    for a given test case is dependant on the scheme and party being tested. Please consult Section 6 of SP 800-56Ar3 to determine whether or not an "optional" item is applicable to the scheme being tested and must be included as part of the vPartyInfo for a given test case.
     *** vPartyId is the identifier of Party V, i.e., the IDv from Sections 5.8 and 6 of SP 800-56Ar3.
 
 * context
@@ -413,7 +413,7 @@ The following is a example JSON object advertising support for KAS FFC.
 [[generation_reqs_per_scheme]]
 == Generation Requirements per Party per Scheme
 
-The various schemes of KAS all have their own requirements as to keys and nonces per scheme, per party. The below table demonstrates those generation requirements:
+The various schemes of KAS all have their own requirements as to keys and nonces per scheme, per party. The below table demonstrates those generation requirements, i.e., what values will be provided by the server per scheme and party:
 
 [[scheme_generation_requirements]]
 
