--- a/src/srtp/sections/05-capabilities.adoc
+++ b/src/srtp/sections/05-capabilities.adoc
@@ -16,12 +16,13 @@ A registration *SHALL* use these properties
 | aesKeyLength | AES Key sizes the IUT supports | array | Any non-empty subset of {128, 192, 256} | No
 | supportsZeroKdr | Whether or not the IUT supports an empty KDR | boolean | true, false | No 
 | kdrExponent | Key Derivation Rate as an exponent of 2 | array | [0, .., 24] | Yes (if none of the valid values are supported)
-| supports48BitSrtcpIndex | Whether or not the IUT implements a 48-bit SRTCP index | boolean | true, false | Yes
+| supports48BitSrtcpIndex | Whether or not the IUT uses a 48-bit quantity, i.e., `000...0 \|\| 0 \|\| SRTCP
+index`, in the SRTCP key derivation vs a 32-bit quantity, i.e., `0 \|\| SRTCP index` | boolean | true, false | Yes
 |===
 
 NOTE: In the "kdrExponent" array a supported value of 3 corresponds to an actual KDF of 2\^3 or "04" in hex, as the third least significant bit is a 1. If no elements of this array are supported, then it *MAY* be excluded. If this is the case, then the IUT *MUST* support an empty KDR via "supportsEmptyKdr" set to true.
 
-NOTE: When the "supports48BitSrtcpIndex" property is present and set to true, the IUT will be tested with 48-bit SRTCP indexes in line with IETF RFC Errata ID 3712. When "supports48BitSrtcpIndex" is ommited or set to false, the IUT will be tested with 32-bit SRTCP indexes as per the original RFC 3711.
+NOTE: When the "supports48BitSrtcpIndex" property is present and set to true, the tests *SHALL* assume that the IUT uses a 48-bit quantity, i.e., `000...0 || 0 || SRTCP index`, in the SRTCP key derivation in line with IETF RFC Errata ID 3712 and https://csrc.nist.gov/csrc/media/publications/sp/800-135/rev-1/final/documents/sp800-135r1-informative-note-20160919.pdf. When "supports48BitSrtcpIndex" is ommited or set to false, the tests *SHALL* assume that the IUT uses a 32-bit quantity, i.e., `0 || SRTCP index`, in the SRTCP key derivation as per the original RFC 3711.
 
 An example registration within an algorithm capability exchange looks like this.
 
