--- a/src/srtp/sections/05-capabilities.adoc
+++ b/src/srtp/sections/05-capabilities.adoc
@@ -67,7 +67,8 @@ An example registration within an algorithm capability exchange looks like this.
             22,
             23,
             24
-        ]
+        ],
+        "supports48BitSrtcpIndex": true
     }
 ]
 ----
