--- a/src/srtp/sections/06-test-vectors.adoc
+++ b/src/srtp/sections/06-test-vectors.adoc
@@ -28,8 +28,8 @@ Each test group contains an array of one or more test cases. Each test case is a
 | tcId | Test case idenfitier | integer
 | masterKey | Master key value | hex
 | masterSalt | Master salt value | hex
-| index | Index value for SCTP | hex
-| srtcpIndex | Index value for SRTCP | hex
+| index | Index value for the SRTP key derivation | hex
+| srtcpIndex | Index value for the SRTCP key derivation | hex
 |===
 
 Here is an abbreviated yet fully constructed example of the prompt.
