X9.63 KDF note regarding SHA-1 support
https://github.com/usnistgov/ACVP/issues/1403

--- a/src/ans9.63/sections/05-capabilities.adoc
+++ b/src/ans9.63/sections/05-capabilities.adoc
@@ -58,7 +58,7 @@ An example registration within an algorithm capability exchange looks like this
 [#valid-sha]
 ==== Valid Hash Functions
 
-The following hash functions *MAY* be advertised by an ACVP compliant client under the 'hashAlg' property
+The following hash functions *MAY* be advertised by an ACVP compliant client under the 'hashAlg' property. SHA-1 is not supported as section 5.6.2 of ANSI X9.63-2011 requires "An Approved hash function that offers 112 bits of security or more shall be used, i.e. an Approved hash function whose output is 224 bits or more."
 
 * SHA2-224
 * SHA2-256
