Updates RSA DP 2.0
updates the RSA DP 2.0 capabilities and test vector descriptions

--- a/src/rsa/sections/05-decprim-capabilities.adoc
+++ b/src/rsa/sections/05-decprim-capabilities.adoc
@@ -29,9 +29,9 @@ An example registration is the following
 
 === RSA DecryptionPrimitive SP800-56Br2 Mode Capabilities
 
-The RSA decryptionPrimitive mode capabilities are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. Two properties are supported in the registration, A Modulus array that supports three modulo values of 2048, 3072, and 4096. For Private Key Modes, we support "Standard/AFT" and "CRT" (Chinese Remainder Theorom). For the Standard/AFT mode see <<SP800-56Br2>>, Section 7.1.2.1 for details, and for CRT mode, we provide a see <<SP800-56Br2>>, Section 7.1.2.3 for details.
+The RSA decryptionPrimitive mode capabilities are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. Two properties are supported in the registration. A 'modulus' array supports three modulo values of 2048, 3072, and 4096. For private 'keyFormat', the "standard" and "crt" (Chinese Remainder Theorem) private key formats are supported. "standard" equates to the prime-factor private key format described in <<SP800-56Br2>>. See the descriptions of basic, CRT, and prime-factor private key formats in Section 3.2 of <<SP800-56Br2>>.
 
-In testing in Standard mode, a 'cipherText', along with key parameters 'P', 'Q', and 'D' values are provided, see <<SP800-56Br2>>, Section 7.1.2.1 for details. When testing for Chinese Remainder Theorom, a 'cipherText', 'dp', 'dQ', and 'qInv' are provided, see <<SP800-56Br2>>, Section 7.1.2.1 for details. 
+When testing the "standard"/prime-factor private key format, a ciphertext (ct), along with private key p, q and d component values are provided, see <<SP800-56Br2>>, Section 7.1.2.2 for details. If an IUT supports the basic private key format, the p and q values provided by the "standard"/prime-factor testing can be multiplied to produce the needed n value.  When testing for the Chinese Remainder Theorem private key format, a ciphertext (ct), the p, q, n, dmp1 (dP), dmq1 (dQ), and iqmp (qInv) values are provided, see <<SP800-56Br2>>, Section 7.1.2.3 for details. 
 See the ACVP specification for details on the registration message.
 
 An example registration is the following
