--- a/src/rsa/sections/06-decprim-test-vectors.adoc
+++ b/src/rsa/sections/06-decprim-test-vectors.adoc
@@ -86,9 +86,9 @@ The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group ele
 
 === Test Cases for RSA Decryption Primitive SP800-56Br2
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / DecryptionPrimitive / 1.0 test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / DecryptionPrimitive / SP800-56Br2 test vector.
 
-.RSA Decryption Primitive 1.0 Test Case Properties
+.RSA Decryption Primitive SP800-56Br2 Test Case Properties
 |===
 | JSON Values | Description | JSON Type
 
