Adds LMS document and cleans up README

--- a/src/ecdsa/sections/05-capabilities.adoc
+++ b/src/ecdsa/sections/05-capabilities.adoc
@@ -24,7 +24,7 @@ Each ECDSA algorithm capability advertised is a self-contained JSON object using
 | JSON Value | Description | JSON type | Valid Values
 
 | algorithm | The ECDSA algorithm to be validated | string | See <<supported>>
-| mode | The ECDSA mdoe to be validated | string | See <<supported>>
+| mode | The ECDSA mode to be validated | string | See <<supported>>
 | revision | The algorithm testing revision to use | string | See <<supported>>
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | capabilities | The individual ECDSA Mode and Revision capabilities | array of capability objects | See <<ecdsa_keyGen_capabilities>>, <<ecdsa_keyVer_capabilities>>, <<ecdsa_sigGen_capabilities>>, <<ecdsa_sigVer_capabilities>>, <<ecdsa_detsigGen_capabilities>>
