updates test vector section headings

--- a/src/lms/sections/06-lms-keygen-test-vectors.adoc
+++ b/src/lms/sections/06-lms-keygen-test-vectors.adoc
@@ -20,7 +20,7 @@ The test group for LMS / KeyGen / 1.0 is as follows:
 |===
 
 [[LMS_keyGen_tvjs]]
-==== LMS keyGen Test Groups JSON Schema
+==== LMS keyGen Test Case JSON Schema
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS test vector.
 
