--- a/src/lms/sections/06-lms-sigver-test-vectors.adoc
+++ b/src/lms/sections/06-lms-sigver-test-vectors.adoc
@@ -21,7 +21,7 @@ The test group for LMS / SigVer / 1.0 is as follows:
 |===
 
 [[LMS_sigVer_tvjs]]
-==== LMS SigVer Test Groups JSON Schema
+==== LMS SigVer Test Case JSON Schema
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS test vector.
 
