--- a/src/lms/sections/06-lms-siggen-test-vectors.adoc
+++ b/src/lms/sections/06-lms-siggen-test-vectors.adoc
@@ -20,7 +20,7 @@ The test group for LMS / SigGen / 1.0 is as follows:
 |===
 
 [[LMS_sigGen_tvjs]]
-==== LMS SigGen Test Groups JSON Schema
+==== LMS SigGen Test Case JSON Schema
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS test vector.
 
