--- a/src/lms/sections/05-capabilities.adoc
+++ b/src/lms/sections/05-capabilities.adoc
@@ -2,7 +2,7 @@
 [[prereq_algs]]
 === Required Prerequisite Algorithms for LMS Validations
 
-Each LMS implementation relies on other cryptographic primitives. For example, LMS KeyGen uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:
+Each LMS implementation relies on other cryptographic primitives. For example, LMS keyGen uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:
 
 [[rereqs_table]]
 .Required LMS Prerequisite Algorithms JSON Values
