--- a/src/lms/sections/05-lms-keygen-capabilities.adoc
+++ b/src/lms/sections/05-lms-keygen-capabilities.adoc
@@ -1,14 +1,14 @@
 
 [[lms_keyGen_capabilities]]
-==== LMS KeyGen Mode Capabilities Example
+==== LMS keyGen Mode Capabilities Example
 
-Below is an example of the registration for LMS / KeyGen / 1.0
+Below is an example of the registration for LMS / keyGen / 1.0
 
 [source, json]
 ----
 {
     "algorithm": "LMS",
-    "mode": "KeyGen",
+    "mode": "keyGen",
     "revision": "1.0",
     "prereqVals": [
         {
