--- a/src/lms/sections/05-lms-sigver-capabilities.adoc
+++ b/src/lms/sections/05-lms-sigver-capabilities.adoc
@@ -1,14 +1,14 @@
 
 [[lms_sigVer_capabilities]]
-==== LMS SigVer Mode Capabilities Example
+==== LMS sigVer Mode Capabilities Example
 
-Below is an example of the registration for LMS / SigVer / 1.0
+Below is an example of the registration for LMS / sigVer / 1.0
 
 [source, json]
 ----
 {
     "algorithm": "LMS",
-    "mode": "SigVer",
+    "mode": "sigVer",
     "revision": "1.0",
     "prereqVals": [
         {
