--- a/src/lms/sections/06-lms-keygen-test-vectors.adoc
+++ b/src/lms/sections/06-lms-keygen-test-vectors.adoc
@@ -6,10 +6,10 @@
 
 The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.
 
-The test group for LMS / KeyGen / 1.0 is as follows:
+The test group for LMS / keyGen / 1.0 is as follows:
 
 [[LMS_keyGen_vs_tg_table]]
-.LMS KeyGen Test Group JSON Object
+.LMS keyGen Test Group JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -34,7 +34,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | seed | The seed used to generate the OTS values | hex
 |===
 
-The following is an example JSON object sent from the server to the client for LMS / KeyGen / 1.0. 
+The following is an example JSON object sent from the server to the client for LMS / keyGen / 1.0. 
 
 [source, json]
 ----
@@ -45,7 +45,7 @@ The following is an example JSON object sent from the server to the client for L
     {
         "vsId": 1564,
         "algorithm": "LMS",
-        "mode": "KeyGen",
+        "mode": "keyGen",
         "revision": "1.0",
         "testGroups": [
             {
