--- a/src/lms/sections/07-lms-keygen-responses.adoc
+++ b/src/lms/sections/07-lms-keygen-responses.adoc
@@ -1,10 +1,10 @@
-[[LMS_KeyGen_vector_responses]]
-=== LMS KeyGen Test Vector Responses
+[[LMS_keyGen_vector_responses]]
+=== LMS keyGen Test Vector Responses
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS / KeyGen / 1.0 test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS / keyGen / 1.0 test vector.
 
-[[LMS_KeyGen_vs_tr_table]]
-.LMS KeyGen Test Case Response JSON Object
+[[LMS_keyGen_vs_tr_table]]
+.LMS keyGen Test Case Response JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -12,7 +12,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | publicKey | The computed public key of the tree | hex
 |===
 
-The following is an example JSON test vector response object for LMS / KeyGen / 1.0.
+The following is an example JSON test vector response object for LMS / keyGen / 1.0.
 
 [source, json]
 ----
