--- a/src/lms/sections/07-lms-siggen-responses.adoc
+++ b/src/lms/sections/07-lms-siggen-responses.adoc
@@ -1,10 +1,10 @@
-[[LMS_SigGen_vector_responses]]
-=== LMS SigGen Test Vector Responses
+[[LMS_sigGen_vector_responses]]
+=== LMS sigGen Test Vector Responses
 
-The test groups for LMS / SigGen / 1.0 contain public key properties. The groups can be described using the following table.
+The test groups for LMS / sigGen / 1.0 contain public key properties. The groups can be described using the following table.
 
-[[LMS_SigGen_group_table]]
-.LMS SigGen Test Group Response JSON Object
+[[LMS_sigGen_group_table]]
+.LMS sigGen Test Group Response JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -13,10 +13,10 @@ The test groups for LMS / SigGen / 1.0 contain public key properties. The groups
 | tests | The individual test cases for the group | array
 |===
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS / SigGen / 1.0 test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS / sigGen / 1.0 test vector.
 
-[[LMS_SigGen_vs_tr_table]]
-.LMS SigGen Test Case Response JSON Object
+[[LMS_sigGen_vs_tr_table]]
+.LMS sigGen Test Case Response JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -24,7 +24,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | signature | The generated signature | hex
 |===
 
-The following is an example JSON test vector response object for LMS / SigGen / 1.0.
+The following is an example JSON test vector response object for LMS / sigGen / 1.0.
 
 [source, json]
 ----
