--- a/src/lms/sections/07-lms-sigver-responses.adoc
+++ b/src/lms/sections/07-lms-sigver-responses.adoc
@@ -1,10 +1,10 @@
-[[LMS_SigVer_vector_responses]]
-=== LMS SigVer Test Vector Responses
+[[LMS_sigVer_vector_responses]]
+=== LMS sigVer Test Vector Responses
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS / SigVer / 1.0 test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS / sigVer / 1.0 test vector.
 
-[[LMS_SigVer_vs_tr_table]]
-.LMS SigVer Test Case Response JSON Object
+[[LMS_sigVer_vs_tr_table]]
+.LMS sigVer Test Case Response JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -12,7 +12,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | testPassed | Whether or not the signature verified | boolean
 |===
 
-The following is an example JSON test vector response object for LMS / SigVer / 1.0. 
+The following is an example JSON test vector response object for LMS / sigVer / 1.0. 
 
 [source, json]
 ----
