--- a/src/lms/sections/03-supported.adoc
+++ b/src/lms/sections/03-supported.adoc
@@ -4,6 +4,6 @@
 
 The following LMS algorithms *MAY* be advertised by the ACVP compliant cryptographic module. The list is in the form "algorithm / mode / revision".
 
-* LMS / KeyGen / 1.0
-* LMS / SigGen / 1.0
-* LMS / SigVer / 1.0
+* LMS / keyGen / 1.0
+* LMS / sigGen / 1.0
+* LMS / sigVer / 1.0
