--- a/src/lms/sections/05-lms-siggen-capabilities.adoc
+++ b/src/lms/sections/05-lms-siggen-capabilities.adoc
@@ -1,14 +1,14 @@
 
 [[lms_sigGen_capabilities]]
-==== LMS SigGen Mode Capabilities Example
+==== LMS sigGen Mode Capabilities Example
 
-Below is an example of the registration for LMS / SigGen / 1.0
+Below is an example of the registration for LMS / sigGen / 1.0
 
 [source, json]
 ----
 {
     "algorithm": "LMS",
-    "mode": "SigGen",
+    "mode": "sigGen",
     "revision": "1.0",
     "prereqVals": [
         {
