--- a/src/lms/sections/06-lms-sigver-test-vectors.adoc
+++ b/src/lms/sections/06-lms-sigver-test-vectors.adoc
@@ -1,15 +1,15 @@
 [[LMS_sigVer_test_vectors]]
-=== LMS SigVer Test Vectors
+=== LMS sigVer Test Vectors
 
 [[LMS_sigVer_tgjs]]
-==== LMS SigVer Test Groups JSON Schema
+==== LMS sigVer Test Groups JSON Schema
 
 The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.
 
-The test group for LMS / SigVer / 1.0 is as follows:
+The test group for LMS / sigVer / 1.0 is as follows:
 
 [[LMS_sigVer_vs_tg_table]]
-.LMS SigVer Test Group JSON Object
+.LMS sigVer Test Group JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -21,12 +21,12 @@ The test group for LMS / SigVer / 1.0 is as follows:
 |===
 
 [[LMS_sigVer_tvjs]]
-==== LMS SigVer Test Case JSON Schema
+==== LMS sigVer Test Groups JSON Schema
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS test vector.
 
 [[LMS_sigVer_vs_tc_table]]
-.LMS SigVer Test Case JSON Object
+.LMS sigVer Test Case JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -35,7 +35,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | signature | THe signature to verify | hex
 |===
 
-The following is an example JSON object sent from the server to the client for LMS / SigVer / 1.0.
+The following is an example JSON object sent from the server to the client for LMS / sigVer / 1.0.
 
 [source, json]
 ----
@@ -46,7 +46,7 @@ The following is an example JSON object sent from the server to the client for L
     {
         "vsId": 0,
         "algorithm": "LMS",
-        "mode": "SigVer",
+        "mode": "sigVer",
         "revision": "1.0",
         "isSample": false,
         "testGroups": [
