--- a/src/lms/sections/07-responses.adoc
+++ b/src/lms/sections/07-responses.adoc
@@ -33,7 +33,7 @@ The 'testGroups' section is used to organize the ACVP client response in a simil
 | JSON Property | Description | JSON Type
 
 | tgId | The test group identifier | integer
-| tests | The test case objects in the response, depending on the algorithm see <<LMS_KeyGen_vs_tr_table>>, <<LMS_SigGen_vs_tr_table>>, or <<LMS_SigVer_vs_tr_table>> | array
+| tests | The test case objects in the response, depending on the algorithm see <<LMS_keyGen_vs_tr_table>>, <<LMS_sigGen_vs_tr_table>>, or <<LMS_sigVer_vs_tr_table>> | array
 |===
 
 An example of this is the following
