Adds Additional SHA algos to X9.63 KDF testing
Adds SHA2-512/224, SHA2-512/256, SHA3-224, SHA3-256, SHA3-384 and SHA3-512 support to the ANSI X9.63 KDF testing

https://github.com/usnistgov/ACVP/issues/1403

--- a/src/ans9.63/sections/05-capabilities.adoc
+++ b/src/ans9.63/sections/05-capabilities.adoc
@@ -64,3 +64,9 @@ The following hash functions *MAY* be advertised by an ACVP compliant client und
 * SHA2-256
 * SHA2-384
 * SHA2-512
+* SHA2-512/224
+* SHA2-512/256
+* SHA3-224
+* SHA3-256
+* SHA3-384
+* SHA3-512
