--- a/src/rsa/sections/05-siggen-capabilities.adoc
+++ b/src/rsa/sections/05-siggen-capabilities.adoc
@@ -125,7 +125,7 @@ The following RSA / sigGen / FIPS186-5 capabilities *MAY* be advertised by the A
 | modulo | supported RSA modulo for signature generation - see <<FIPS186-5>>, Section 5 | integer | any one of the supported modulo sizes {2048, 3072, 4096}
 | maskFunction | the mask function used, only valid for PSS | array | any non-empty subset of {"mgf1", "shake-128", "shake-256"}
 | hashPair | supported hash algorithms and optional salt length for signature generation for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | an array of objects containing a hashAlg and an optional saltLen
-| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256"}
+| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256", "SHA3-224", "SHA3-256", "SHA3-384", "SHA3-512", "SHAKE-128", "SHAKE-256"}
 | saltLen | supported salt lengths for PSS signature generation - see <<FIPS186-5>>, Section 5.4 | integer | See the note below
 |===
 
