detECDSA sigGen doesn't support SHAKE

--- a/src/ecdsa/sections/05-ecdsa-detsiggen-capabilities.adoc
+++ b/src/ecdsa/sections/05-ecdsa-detsiggen-capabilities.adoc
@@ -17,7 +17,7 @@ The complete list of DetECDSA / sigGen / FIPS186-5 capabilities *MAY* be adverti
 | JSON Value | Description | JSON type | Valid Values
 
 | curve | The curves supported with a particular set of hash algorithms. | array | Any non-empty subset of {"P-224", "P-256", "P-384", "P-521"}
-| hashAlg | The hash functions supported when signing a message for a particular set of curves. | array | Any non-empty subset of {"SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256", "SHA3-224", "SHA3-256", "SHA3-384", "SHA3-512", "SHAKE-128", "SHAKE-256"}
+| hashAlg | The hash functions supported when signing a message for a particular set of curves. | array | Any non-empty subset of {"SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256", "SHA3-224", "SHA3-256", "SHA3-384", "SHA3-512"}
 |===
 
 NOTE: Separate capability JSON objects in the array *MAY* represent different groupings of curves and hash algorithms. For example if one object in the 'capabilities' array has 'curve' "P-224" and 'hashAlg' "SHA2-224" while the next object has 'curve' "P-256" and 'hashAlg' "SHA2-256", then the tests generated will maintain those relations. A test group will be generated with cases for signatures over "P-224" using "SHA2-224" and a test group will be generated with cases for signatures over "P-256" using "SHA2-256".
