--- a/src/rsa/sections/05-sigprim-capabilities.adoc
+++ b/src/rsa/sections/05-sigprim-capabilities.adoc
@@ -36,8 +36,8 @@ The following RSA / SignaturePrimitive / 2.0 capabilities *MAY* be advertised by
 |===
 | JSON value | Description | JSON type | Valid values
 
-| modulo | supported RSA modulo for signature generation - see <<FIPS186-4>>, Section 5 | integer | any one of the supported modulo sizes {2048, 3072, 4096}
-| keyFormat | The format by which the client expects the private key to be communicated. Standard refers to the default p, q, d values. Chinese Remainder Theorem uses decomposed values for optimized decryption p, q, dmp1, dmq1, iqmp | string | "standard", "crt"
+| modulo | supported RSA modulo for signature generation - see <<FIPS186-4>>, Section 5 | array of integer | any of the supported modulo sizes {2048, 3072, 4096}
+| keyFormat | The format by which the client expects the private key to be communicated. Standard refers to the default p, q, d values. Chinese Remainder Theorem uses decomposed values for optimized decryption p, q, dmp1, dmq1, iqmp | array of string | "standard", "crt"
 | pubExpMode | Whether the IUT can handle a random or fixed public exponent | string | "random", "fixed"
 | fixedPubExp | The fixed public exponent e | hex | Any value supported by <<FIPS186-4>>: 65537 - 2^256-1, odd
 |===
