--- a/src/rsa/sections/03-supported.adoc
+++ b/src/rsa/sections/03-supported.adoc
@@ -19,7 +19,7 @@ The following algorithms *MAY* be advertised by the ACVP compliant cryptographic
 | "RSA" | "signaturePrimitive" | "1.0" | <<FIPS186-5>>
 | "RSA" | "signaturePrimitive" | "2.0" | <<FIPS186-5>>
 | "RSA" | "decryptionPrimitive" | "1.0" | <<SP800-56B>>
-| "RSA" | "decryptionPrimitive" | "SP800-56Br2" | <<SP800-56Br2>>
+| "RSA" | "decryptionPrimitive" | "Sp800-56Br2" | <<SP800-56Br2>>
 |===
 
 These will be refered to as algorithm / mode / revision throughout the document, for example RSA / keyGen / 1.0.
@@ -37,4 +37,4 @@ The following RSA algorithms *MAY* claim conformance to <<SP800-106>>:
 
 The following RSA algorithms *MAY* claim conformance to <<SP800-56Br2>>:
 
- * RSA / decryptionPrimitive / SP800-56Br2
+ * RSA / decryptionPrimitive / Sp800-56Br2
