--- a/src/rsa/sections/06-decprim-test-vectors.adoc
+++ b/src/rsa/sections/06-decprim-test-vectors.adoc
@@ -67,11 +67,11 @@ Here is an abbreviated yet fully constructed example of the prompt
 ]
 ----
 
-=== Test Groups for RSA Decryption Primitive SP800-56Br2
+=== Test Groups for RSA Decryption Primitive Sp800-56Br2
 
 The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the {spec-algorithm} JSON elements of the Test Group JSON object
 
-.RSA Decryption Primitive SP800-56Br2 Test Group Properties
+.RSA Decryption Primitive Sp800-56Br2 Test Group Properties
 |===
 | JSON Values | Description | JSON Type
 
@@ -84,11 +84,11 @@ The testGroups element at the top level in the test vector JSON object is an arr
 
 The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' (see <<testtypes>>) the group is addressing.
 
-=== Test Cases for RSA Decryption Primitive SP800-56Br2
+=== Test Cases for RSA Decryption Primitive Sp800-56Br2
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / DecryptionPrimitive / SP800-56Br2 test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / DecryptionPrimitive / Sp800-56Br2 test vector.
 
-.RSA Decryption Primitive SP800-56Br2 Test Case Properties
+.RSA Decryption Primitive Sp800-56Br2 Test Case Properties
 |===
 | JSON Values | Description | JSON Type
 
