--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -1358,7 +1358,10 @@ If not provided `isSample`, and `encryptAtRest` default to `false`.
         "createdOn": "2018-05-31T12:03:43Z",
         "expiresOn": "2018-06-30T12:03:43Z",
         "encryptAtRest": false,
-        "vectorSetsUrl": "/acvp/v1/testSessions/2/vectorSets",
+        "vectorSetUrls": [
+            "/acvp/v1/testSessions/2/vectorSets/10",
+            "/acvp/v1/testSessions/2/vectorSets/11",
+            "/acvp/v1/testSessions/2/vectorSets/12"],
         "publishable": false,
         "passed": true,
         "isSample": true,
