--- a/src/sha/sections/04-testtypes.adoc
+++ b/src/sha/sections/04-testtypes.adoc
@@ -18,8 +18,9 @@ There are two types of tests for SHA-1 and SHA-2: functional tests and Monte Car
 === Monte Carlo tests for SHA-1 and SHA-2
 
 The MCTs start with an initial condition (SEED which is a single message) and perform a series of chained computations. The algorithm is shown below.
+Note: The algorithm was updated, 3/2023, to support SmallestSupportedMessageLengthGreaterThanZero's less than 3*digestSize, a limitation from the original implementation.
 
-.SHA-1 and SHA-2 Monte Carlo Test
+.SHA-1 and SHA-2 Monte Carlo Test (Original)
 [source, code]
 ----
 For j = 0 to 99
@@ -32,6 +33,40 @@ For j = 0 to 99
         C = MD
     Output MD
     SEED = MD
+----
+
+.SHA-1 and SHA-2 Monte Carlo Test (Updated)
+[source, code]
+----
+if SupportedMessageLengths.Contains(3*digestSize):
+    SEED = GetRandomBitsOfLength(digestSize)
+    For j = 0 to 99
+        A = B = C = SEED
+        For i = 0 to 999
+            MSG = A || B || C
+            MD = SHA(MSG)
+            A = B
+            B = C
+            C = MD
+       Output MD
+       SEED = MD
+ else 
+    SEED = GetRandomBitsOfLength(SmallestSupportedMessageLengthGreaterThanZero)
+    For j = 0 to 99
+        A = B = C = SEED
+        For i = 0 to 999
+            MSG = A || B || C
+            If  !SupportedMessageLengths.Contains(LEN(MSG)):
+                MSG = TruncateToSize(MSG, SmallestSupportedMessageLengthGreaterThanZero)
+            MD = SHA(MSG)
+            A = B
+            B = C
+            If SmallestSupportedMessageLengthGreaterThanZero >= digestSize:
+                C = MD || CreateZeroBitStringOfLength(SmallestSupportedMessageLengthGreaterThanZero - digestSize)
+            Else:
+                C = TruncateToSize(MD, SmallestSupportedMessageLengthGreaterThanZero)
+        Output MD
+        SEED = C
 ----
 
 [[LD_test]]
