clarifies the MCT update

--- a/src/sha/sections/04-testtypes.adoc
+++ b/src/sha/sections/04-testtypes.adoc
@@ -18,8 +18,10 @@ There are two types of tests for SHA-1 and SHA-2: functional tests and Monte Car
 === Monte Carlo tests for SHA-1 and SHA-2
 
 The MCTs start with an initial condition (SEED which is a single message) and perform a series of chained computations. The algorithm is shown below.
-Note: The algorithm was updated, 3/2023, to support SmallestSupportedMessageLengthGreaterThanZero's less than 3*digestSize, a limitation from the original implementation.
 
+NOTE: The MCTs were updated, 3/2023, to support the case where !SupportedMessageLengths.Contains(3*digestSize), a limitation of the original MCT design. The change is backwards compatible. 
+
+SHA-1 and SHA-2 Monte Carlo Test (Original)
 .SHA-1 and SHA-2 Monte Carlo Test (Original)
 [source, code]
 ----
@@ -35,6 +37,7 @@ For j = 0 to 99
     SEED = MD
 ----
 
+SHA-1 and SHA-2 Monte Carlo Test (Updated)
 .SHA-1 and SHA-2 Monte Carlo Test (Updated)
 [source, code]
 ----
