fixes formatting issue

--- a/src/sha/sections/04-testtypes.adoc
+++ b/src/sha/sections/04-testtypes.adoc
@@ -21,8 +21,7 @@ The MCTs start with an initial condition (SEED which is a single message) and pe
 
 NOTE: The MCTs were updated, 3/2023, to support the case where !SupportedMessageLengths.Contains(3*digestSize), a limitation of the original MCT design. The change is backwards compatible. 
 
-SHA-1 and SHA-2 Monte Carlo Test (Original)
-.SHA-1 and SHA-2 Monte Carlo Test (Original)
+SHA-1 and SHA-2 Monte Carlo Test (Original):
 [source, code]
 ----
 For j = 0 to 99
@@ -37,8 +36,7 @@ For j = 0 to 99
     SEED = MD
 ----
 
-SHA-1 and SHA-2 Monte Carlo Test (Updated)
-.SHA-1 and SHA-2 Monte Carlo Test (Updated)
+SHA-1 and SHA-2 Monte Carlo Test (Updated):
 [source, code]
 ----
 if SupportedMessageLengths.Contains(3*digestSize):
