Revert "Updated the HASH capabilities to indicate the correct MAX for messageLength, and noted that the IUT must support at least one message length greater than 0."
This reverts commit 9f404b9f457c98da045ae1f3de15a6445568ca5e.

--- a/src/sha/sections/05-capabilities.adoc
+++ b/src/sha/sections/05-capabilities.adoc
@@ -13,13 +13,13 @@ This section describes the constructs for advertising support of hash algorithms
 
 | algorithm | The hash algorithm and mode to be validated. | string
 | revision | The algorithm testing revision to use. | string
-| messageLength | The message lengths in bits supported by the IUT. Minimum allowed is 0, maximum allowed is 65536. | domain
+| messageLength | The message lengths in bits supported by the IUT. Minimum allowed is 0, maximum allowed is 65535. | domain
 | performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GiB being tested. Valid options are {1, 2, 4, 8}. | integer array
 |===
 
 The value of the algorithm property *MUST* be one of the elements from the list in <<supported_algs>>.
 
-NOTE: The IUT must support at least one 'messageLength > 0'. The lengths provided in the 'performLargeDataTest' property are in gibibytes. 1GiB is equivalent to 2^30 bytes. 
+NOTE: The lengths provided in the 'performLargeDataTest' property are in gibibytes. 1GiB is equivalent to 2^30 bytes. 
 
 NOTE: At least one messageLength > 0 must be supported by an IUT in order to accommodate MCT testing.
 
