--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -1361,7 +1361,8 @@ If not provided `isSample`, and `encryptAtRest` default to `false`.
         "vectorSetUrls": [
             "/acvp/v1/testSessions/2/vectorSets/10",
             "/acvp/v1/testSessions/2/vectorSets/11",
-            "/acvp/v1/testSessions/2/vectorSets/12"],
+            "/acvp/v1/testSessions/2/vectorSets/12"
+        ],
         "publishable": false,
         "passed": true,
         "isSample": true,
