After looking through the code and the documentation, this seems to be a copy/paste error. Removed all the ||c.

--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -214,22 +214,22 @@ substitutes "0123456789ABCDEF" in place of the field
 
 * uPartyInfo
 
-  ** uPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
+  ** uPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce }
     *** "Optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
     *** For the purposes of the testing defined in this specification, the uPartyInfo value
     used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "uPartyId { || ephemeralKey } 
-    { || ephemeralNonce } { || dkmNonce } { || c }".
+    { || ephemeralNonce } { || dkmNonce }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the uPartyInfo
     for a given test case is dependant on the scheme and party being tested. Please consult Section 6 of SP 800-56Ar3 to determine whether or not an "optional" item is applicable to the scheme being tested and must be included as part of the uPartyInfo for a given test case. 
     *** uPartyId is the identifier of Party U, i.e., the IDu from Sections 5.8 and 6 of SP 800-56Ar3.
 
 * vPartyInfo
 
-  ** vPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
+  ** vPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce }
     *** "Optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
     *** For the purposes of the testing defined in this specification, the vPartyInfo value
     used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "vPartyId { || ephemeralKey } 
-    { || ephemeralNonce } { || dkmNonce } { || c }".
+    { || ephemeralNonce } { || dkmNonce }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the vPartyInfo
     for a given test case is dependant on the scheme and party being tested. Please consult Section 6 of SP 800-56Ar3 to determine whether or not an "optional" item is applicable to the scheme being tested and must be included as part of the vPartyInfo for a given test case.
      *** vPartyId is the identifier of Party V, i.e., the IDv from Sections 5.8 and 6 of SP 800-56Ar3.
