--- a/src/kas/sp800-56br2/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56br2/sections/05-capabilities.adoc
@@ -248,20 +248,20 @@ Pattern candidates:
 substitutes "0123456789ABCDEF" in place of the field
 
 * uPartyInfo
-  ** uPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
+  ** uPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce }
     *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
     *** For the purposes of the testing defined in this specification, the uPartyInfo value
     used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "uPartyId { || ephemeralKey } 
-    { || ephemeralNonce } { || dkmNonce } { || c }".
+    { || ephemeralNonce } { || dkmNonce }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the uPartyInfo
     for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
 
 * vPartyInfo
-  ** vPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
+  ** vPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce }
     *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
     *** For the purposes of the testing defined in this specification, the vPartyInfo value
     used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "vPartyId { || ephemeralKey } 
-    { || ephemeralNonce } { || dkmNonce } { || c }".
+    { || ephemeralNonce } { || dkmNonce }".
     *** Whether or not an "optional" item, e.g., ephemeralKey, will be included as part of the vPartyInfo
     for a given test case is dependant on the scheme and party being tested. Please consult <<scheme_generation_requirements>> for more information.
     
