--- a/src/kas/sp800-56c/onestepnocounter/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/onestepnocounter/sections/05-capabilities.adoc
@@ -59,13 +59,13 @@ substitutes "0123456789ABCDEF" in place of the field
 * uPartyInfo
   ** uPartyId { || ephemeralData }
     *** For the purposes of the testing defined in this specification, the uPartyInfo value
-    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "uPartyId { || ephemeralData }". Because the KDA is being tested in isolation of the specific schemes it may be used with, ephemeralData is used in place of "{ || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }"
+    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "uPartyId { || ephemeralData }". Because the KDA is being tested in isolation of the specific schemes it may be used with, ephemeralData is used in place of "{ || ephemeralKey } { || ephemeralNonce } { || dkmNonce }"
     *** For a given test case, a partyId value (see <<fixedInfo>>) *SHALL* always be given. ephemeralData values (see <<fixedInfo>>) may be provided or omitted.
 
 * vPartyInfo
   ** vPartyId { || ephemeralData }
     *** For the purposes of the testing defined in this specification, the vPartyInfo value
-    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "vPartyId { || ephemeralData }". Because the KDA is being tested in isolation of the specific schemes it may be used with, ephemeralData is used in place of "{ || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }"
+    used to create the fixedInfo that is input to the key derivation function *SHALL* take the form of "vPartyId { || ephemeralData }". Because the KDA is being tested in isolation of the specific schemes it may be used with, ephemeralData is used in place of "{ || ephemeralKey } { || ephemeralNonce } { || dkmNonce }"
     *** For a given test case, a partyId value (see <<fixedInfo>>) *SHALL* always be given. ephemeralData values (see <<fixedInfo>>) may be provided or omitted.
 
 * context
