Updated the documentation with the correct parameters and examples

--- a/src/rsa/sections/06-decprim-test-vectors.adoc
+++ b/src/rsa/sections/06-decprim-test-vectors.adoc
@@ -95,12 +95,14 @@ Each test group contains an array of one or more test cases. Each test case is a
 | tcId | Test case identifier | integer
 | plainText | An individual plainText| HEX
 | ciphertext | An individual ciphertext | hex
+| n | Used by tests for calculation | hex
+| e | Used by tests for calculation | hex
+| p | Used by tests for calculation | hex
+| q | Used by tests for calculation | hex
+| d | Used by tests for calculation | hex
 | Dmp1 | Used by CRT tests for calculation | hex
 | Dmp1 | Used by CRT tests for calculation | hex
 | Iqmp | Used by CRT tests for calculation | hex
-| p | Used by AFT tests for calculation | hex
-| q | Used by AFT tests for calculation | hex
-| d | Used by AFT tests for calculation | hex
 |===
 
 NOTE: A failing plainText is one such that does not match what the client provides
@@ -129,7 +131,9 @@ Here is an abbreviated yet fully constructed example of the prompt
                     "ct": "610EB23035CBF80373F282D9FCD8FCDAA411519BD9C2C889A6CDE09C1C8D4A188DF9781F1AA14...",
                     "p": "EC7C9A50B4C9DC6D5CBED336D42FCB0F669A5D98EE16F01A2BE8AB5EDACADEAC5827F30E50AA4CC9C6F...",
                     "q": "E1905BABFCA4135C62F4457FA9BD2ABA93FE1CE9401BF2F5708081752E8C962DE94CDCF9A35748DB4820...",
-                    "d": "0167BACAD1034759CF8B36C19C1B92A50E37703208E9F75291383478A58A65879A6578938B4FBBF80015BA3..."
+                    "d": "0167BACAD1034759CF8B36C19C1B92A50E37703208E9F75291383478A58A65879A6578938B4FBBF80015BA3...",
+                    "n": "A267B19CA3573AA9392B6D75EF5A38D1AC99982B8B2ED79B399BC80842C85ABCACD2A9A0F849AC0FDCD4...",
+                    "e": "2BEE9C8C06B5"
                 }
             ]
         },
@@ -144,7 +148,12 @@ Here is an abbreviated yet fully constructed example of the prompt
                     "ct": "95B5BCDCCAE9802BFFB562D5CA8CC027C33178952CD02AECCA122D1AAF24CD703930EA511E27BD1393C...",
                     "dmp1": "D69E5464B2DFD07BBA23B90684BAEC522EE997F3F805077EB00BB76FFD3FF5D053C39384035C75D6CDA6FC0...",
                     "dmq1": "A5A23DC4E454DEB6CB2466910BB65BAD1EA65FD2E1CAADD3FB83AB0DCE407B25F4257A038EACC5909AD...",
-                    "iqmp": "4B3702BB2BDAD984047633F0B0DD4C6C619791CD7B280D15E1DADB08FDDBFFA546EC926F40A54D38E682B90B..."
+                    "iqmp": "4B3702BB2BDAD984047633F0B0DD4C6C619791CD7B280D15E1DADB08FDDBFFA546EC926F40A54D38E682B90B...",
+                    "p": "F244D4C2D0C82F3E4C3D20965D418E3AD5D62FCB0F669A5D98EE16F01A2BE8AB5EDACADEAC5827F30E50AA4CC9C6F...",
+                    "q": "D85F808CCCEC37B5B08B2067046BC0E9CA32ABA93FE1CE9401BF2F5708081752E8C962DE94CDCF9A35748DB4820...",
+                    "d": "0E24211348C0DA791CCB9E9F55FEFAD0303208E9F75291383478A58A65879A6578938B4FBBF80015BA3...",
+                    "n": "CCC474B6FE688ACC7AF61D7797DDB240735CF5A38D1AC99982B8B2ED79B399BC80842C85ABCACD2A9A0F849AC0FDCD4...",
+                    "e": "02FC20D82B"
                 }
             ]
         }
